<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/app_name"
            android:textColor="@color/colorTitleText"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <TextView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/search_background"
        android:fontFamily="@font/medium"
        android:padding="16dp"
        android:text="@string/search"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/mapFocus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/focus_background"
        android:padding="12dp"
        android:src="@drawable/my_location"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/userWeatherView"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/colorPrimary" />

    <ProgressBar
        android:id="@+id/mapLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorProgressBar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="@+id/mapView"
        app:layout_constraintStart_toStartOf="@+id/mapView"
        app:layout_constraintTop_toTopOf="@+id/mapView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userWeatherView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="@+id/mapView"
        app:layout_constraintStart_toStartOf="@+id/mapView">

        <!-- Name -->
        <TextView
            android:id="@+id/weatherTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/bold"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Weather Description -->
        <TextView
            android:id="@+id/weatherDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherTitle" />

        <!-- Weather Icon -->
        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintBottom_toBottomOf="@+id/weatherDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/weatherTitle" />

        <ProgressBar
            android:id="@+id/weatherLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorProgressBar"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/locationPermissionCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorBackground"
        android:backgroundTint="@color/colorBackground"
        android:elevation="4dp"
        android:visibility="gone"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center_horizontal"
                android:text="@string/enable_location_access"
                android:textColor="@color/colorText"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/regular"
                android:gravity="center_horizontal"
                android:text="@string/to_provide_you_with_the_best_experience_we_need_access_to_your_location"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/medium"
                android:gravity="center_horizontal"
                android:text="@string/location_access_is_required_to"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/regular"
                android:text="@string/enable_location_based_features_and_services"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/regular"
                android:text="@string/provide_accurate_weather_and_local_information"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="14sp" />

            <Button
                android:id="@+id/permissionBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorButtonBackground"
                android:fontFamily="@font/medium"
                android:text="@string/grant_location_access"
                android:textColor="@color/colorButtonText"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/noInternetView"
        layout="@layout/no_internet_view"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>