<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noInternetCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80AAAFB4">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="24dp"
        android:background="@color/colorBackground"
        android:backgroundTint="@color/colorBackground"
        android:elevation="4dp"
        android:visibility="visible"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center_horizontal"
                android:text="@string/no_internet_connection"
                android:textColor="@color/colorText"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/regular"
                android:gravity="center_horizontal"
                android:text="@string/you_have_lost_internet_connection"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <Button
                android:id="@+id/checkInternetBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorButtonBackground"
                android:fontFamily="@font/medium"
                android:text="@string/check_network"
                android:textColor="@color/colorButtonText"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>