<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="weather"
            type="com.mkd.whatstheweather.model.WeatherDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".fragment.DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/bold"
                android:textColor="@color/colorTitleText"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weatherDetailView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="48dp"
            android:paddingBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBar">

            <!-- Time -->
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:textColor="@color/colorTimeHighlight"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:time="@{weather}" />

            <!-- City Name -->
            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time"
                app:name="@{weather}" />

            <!-- Weather Icon -->
            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/weather_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cityName"
                app:weatherIcon="@{weather}" />

            <!-- Weather Description -->
            <TextView
                android:id="@+id/weatherDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:description="@{weather}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cityName" />

            <!-- Weather Details -->
            <LinearLayout
                android:id="@+id/layoutWeatherDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
                tools:layout_editor_absoluteX="32dp">

                <!-- Temperature -->
                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    app:temp="@{weather}" />

                <!-- Feels Like -->
                <TextView
                    android:id="@+id/feelsLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    app:feelsLike="@{weather}" />

                <!-- Humidity -->
                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    app:humidity="@{weather}" />

                <!-- Wind -->
                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    app:wind="@{weather}" />

                <!-- Sunrise -->
                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    app:sunrise="@{weather}" />

                <!-- Sunset -->
                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    app:sunset="@{weather}" />
            </LinearLayout>

            <Button
                android:id="@+id/addFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorButtonBackground"
                android:fontFamily="@font/bold"
                android:paddingVertical="16dp"
                android:text="@string/add_to_favorite"
                android:textColor="@color/colorButtonText"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/layoutWeatherDetails"
                app:layout_constraintStart_toStartOf="@+id/layoutWeatherDetails"
                app:layout_constraintTop_toBottomOf="@+id/layoutWeatherDetails" />

            <Button
                android:id="@+id/removeFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorButtonBackground"
                android:fontFamily="@font/bold"
                android:paddingVertical="16dp"
                android:text="@string/remove_from_favourites"
                android:textColor="@color/colorButtonText"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/layoutWeatherDetails"
                app:layout_constraintStart_toStartOf="@+id/layoutWeatherDetails"
                app:layout_constraintTop_toBottomOf="@+id/layoutWeatherDetails" />

            <ProgressBar
                android:id="@+id/loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/colorProgressBar"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/noInternetView"
            layout="@layout/no_internet_view"
            android:visibility="gone" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>